# dbus-cplusplus

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  SConscript  TODO  autogen.sh  configure  configure.ac  dbus-c++-0.3.pc.in  dbus-c++-1.pc.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
config/: ax_config_header.m4  ax_config_header.m4~
data/: Makefile.in
doc/: Doxyfile.in  Makefile.am  Makefile.in  head.html
doc/html/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in  README  server.cpp  server.h
examples/echo/: Makefile.am  Makefile.in  README  echo-client.cpp  echo-client.h  echo-introspect.xml  echo-server.cpp  echo-server.h
examples/echo_ecore/: Makefile  Makefile.am  echo-client-glue.h  echo-client-mt  echo-client.cpp  echo-client.h  echo-server  echo-server-glue.h  echo-server.cpp  echo-server.h
examples/echo_ecore/.deps/: echo-server.Po  echo_client_mt-echo-client.Po
examples/echo_ecore/.libs/: lt-echo-client-mt  lt-echo-server
examples/ecore/: Makefile.am  dbus_ecore.cpp  dbus_ecore.h
examples/glib/: Makefile.am  dbus-browser.cpp  dbus-browser.h
examples/hal/: Makefile.am  Makefile.in  hal-listen.cpp  hal-listen.h
examples/properties/: Makefile.am  Makefile.in  README  props-server.cpp  props-server.h
examples/properties_get_set/: propsgs-client.cpp  propsgs-client.h  propsgs-introspect.xml  propsgs-server.cpp
include/dbus-c++/: Ecore_Dispatcher.h  config.h.in  connection.h  dbus-c++.h  dbus.h  debug.h  dispatcher.h  ecore-integration.h  error.h  eventloop-integration.h  eventloop.h  glib-integration.h  interface.h  introspection.h  message.h  object.h  pendingcall.h  pipe.h  property.h  refptr_impl.h  server.h  types.h  util.h  xml.h
src/: .sconsign  Ecore_Dispatcher.cpp  Makefile.am  Makefile.in  connection.cpp  connection_p.h  debug.cpp  dispatcher.cpp  dispatcher_p.h  ecore-integration.cpp  error.cpp  eventloop-integration.cpp  eventloop.cpp  glib-integration.cpp  interface.cpp  internalerror.h  introspection.cpp  message.cpp  message_p.h  object.cpp  pendingcall.cpp  pendingcall_p.h  pipe.cpp  property.cpp  server.cpp  server_p.h  types.cpp  xml.cpp
test/functional/Test1/: Makefile.am  TestApp.cpp  TestApp.h  TestAppIntro.h  TestAppIntro.xml  TestAppIntroProvider.h  TestAppMain.cpp
test/generator/: Makefile.am  dbuscxx_test_generator.xml
tests/: Makefile.am  Makefile.in  test-introspect.xml
tools/: Makefile.am  Makefile.in  generate_adaptor.cpp  generate_adaptor.h  generate_proxy.cpp  generate_proxy.h  generator_utils.cpp  generator_utils.h  introspect.cpp  introspect.h  xml.cpp  xml2cpp.cpp  xml2cpp.h
