SUBDIRS = src tools data doc examples

EXTRA_DIST = autogen.sh

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dbus-c++.pc

MAINTAINERCLEANFILES = \
	configure \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	ltmain.sh \
	mdate-sh \
	missing \
	mkinstalldirs

